# cinnamon-ignore

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-windows-n3ds.ps1  build-windows-wiiu.ps1
cmake/: StageN3DSRomfs.cmake
resources/3ds/meta/: template.rsf
src/: audio_system.h  binary_reader.c  binary_utils.h  collision.h  data_win.c  data_win.h  ini.c  input_recording.c  instance.c  instance.h  json_writer.c  json_writer.h  noop_audio_system.c  profiler.c  renderer.h  runner.c  runner.h  runner_keyboard.h  rvalue.h  text_utils.h  utils.h  vm.c  vm.h  vm_builtins.c  vm_builtins.h
src/gl/: gl_renderer.h  image_decoder.c
src/glfw/: glfw_file_system.c  glfw_file_system.h  ma_audio_system.c  ma_audio_system.h  main.c
src/n3ds/: main.c  n3ds_audio_system.c  n3ds_audio_system.h  n3ds_debug_log.c  n3ds_debug_log.h  n3ds_file_system.c  n3ds_file_system.h  n3ds_platform_config.h  n3ds_renderer.c  n3ds_renderer.h  stb_impl.c
src/wiiu/: main.c  stb_impl.c  wiiu_audio_system.c  wiiu_renderer.c  wiiu_renderer.h
tools/n3ds-preprocess/: CMakeLists.txt  main.c  stb_impl.c
